# ccc-gpu

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .pypirc.example  .readthedocs.yaml  CITATION.cff  CMakeLists.txt  README.md  conda-lock.yml  pyproject.toml
.change_logs/: 2025-01-07_fix_gpu_max_parts_bug.md  2025-07-07_fix_gpu_max_parts_bug.md  2025-07-07_fix_gpu_tie_breaking.md  2025-07-10-fix-categorical-data-overflow.md
.github/workflows/: build_wheels.yml  build_wheels_simple.yml
.info/: 2025-07-08_ccc_comparison_analysis.md
analysis/: readme.md
analysis/00-benchmark/: benchmark_ccc_profiling.ipynb  run_benchmark.sh  run_profiling.py
analysis/03-manuscript/: readme.md
analysis/03-manuscript/11_check-coef-distributions/: readme.md
analysis/03-manuscript/15_compute-coef-intersections/: 00_compute-gtex_tissue_thresholds.ipynb  05_compute_intersections.py  README.md
analysis/03-manuscript/20_combine-intersections/: coef_intersection_counter.py  readme.md  run_slurm_job.sh
analysis/03-manuscript/25_metadata-correlation/: metadata_corr_cli.py
analysis/03-manuscript/30_gene-pair-selection/: readme.md
analysis/99-tutorials/: 05-walkthrough-with-gtex-data.ipynb
analysis/common/: compute_single_gene_pair_correlations_cli.py  metadata_corr_cli.py
docs/: PUBLISHING.md  WHEEL_BUILDING.md  requirements.txt
docs/source/: algorithms.rst  apis.rst  conf.py  index.rst  installation.rst  introduction.rst  usage.rst
docs/source/development/: bindings.rst  build_cuda_module.rst  index.rst  installation.rst  optimization.rst  pacakge_publishing.rst  package_publishing.rst  testing.rst
environment/: environment-benchmark.yaml  environment-dev.yaml  environment-gpu-new.yml  environment-gpu-old.yml  environment-gpu.yml  environment-test-pypi.yaml  environment-toolchain.yaml
environment/scripts/: setup_data.py
libs/ccc/: __init__.py  conf.py  corr.py
libs/ccc/coef/: impl.py  impl_gpu.py
libs/ccc_cuda_ext/: binder.cu  coef.cu  coef.cuh  math.cuh  metrics.cu  metrics.cuh  utils.cuh
nbs/01-glbio/: run_nbs.sh
nbs/01-glbio/05_preprocessing/: 05-gtex_v8-select_all_genes.ipynb
nbs/02-preprint/: setup_analysis.sh
nbs/02-preprint/10_compute_correlations/: 10-combine_coefs.ipynb
nbs/02-preprint/15_intersections/: intersection_cli.py
nbs/02-preprint/25_pvalue/: 17-adjust_pvalues_fdr.ipynb
nbs/02-preprint/99_manuscript/: 05-analyze_significant_pairs.ipynb
nbs/03-manuscript/: todos.md
nbs/03-manuscript/00_preprocessing/: 00-data-exploration.ipynb  00-prepross-gtex-data.ipynb  07-gtex_v8-metadata.ipynb  10-gtex_tissue_thresholds.ipynb  12-gtex_whole_blood-gene_pairs01.ipynb
nbs/03-manuscript/05-metadata_correlation/: 10-correlate-top-genes-with-metadata.py  RASSF2_CYTIP.err  README_10-correlate-top-genes-with-metadata.md  metadata_corr_cli.py
nbs/03-manuscript/05_compute_correlations/: readme.md
nbs/03-manuscript/05_metadata-correlation/: metadata_corr_cli.py
nbs/03-manuscript/10_combine-coefs/: README.md  combine_coefs.py  run_combine_coefs.sh
nbs/03-manuscript/10_combine_coefs/: 10-combine_coefs.ipynb  10-combine_coefs.py  combine.err  combine_coefs.py  tissue_names.txt
nbs/03-manuscript/11_check-coef-distributions/: README.md  run_single_tissue_streaming.sh  run_slurm_streaming.sh  test_density_plot.py
nbs/03-manuscript/11_coef_distribution/: 10-gtex_tissue_thresholds.ipynb  11_00-gtex_general_plots_streaming.py  11_00-gtex_whole_blood-general_plots.ipynb  11_00-gtex_whole_blood-general_plots.py  README.md  run_slurm_job.sh  test_cumulative_fix.py
nbs/03-manuscript/15_intersections/: compute_intersections.ipynb  compute_intersections.py  intersection_cli.py  run_slurm_job.sh  run_slurm_job_custom_cutoff.sh
nbs/03-manuscript/20_combine-intersections/: 00-reduce-all-intersections.ipynb  gene_pair_counter.py  run_slurm_job.sh
nbs/03-manuscript/25_gene-pair-selection/: README.md  gene_pair_selector.py  run_gene_selector.batch.sh  run_gene_selector.sbatch  run_gene_selector.sh
nbs/03-manuscript/25_metadata-correlation/: readme.md
nbs/03-manuscript/30_explore_gene_pairs/: 00-report_top_gene_pairs.py  10-correlate-top-genes-with-metadata.py  12-gtex_whole_blood-gene_pairs01.ipynb  README.md  display_top_gene_pairs.py  gene_pair_inspection.ipynb  report_top_gene_pairs.py
nbs/03-manuscript/35_explore-gene-pairs/: README_10-correlate-top-genes-with-metadata.md  readme.md
nbs/03-manuscript/40_prepare_supp_data/: README.md  ccc_duckdb_query.py  process_ccc_data.py  process_ccc_to_duckdb.py
nbs/99-tutorials/: 05-walkthrough-with-gtex-data.ipynb
nbs/99_manuscript/intro/: 05-relationships_analysis.ipynb
nbs/_glbio/: nohup.out
nbs/_glbio/05_preprocessing/: 05-gtex_v8-select_all_genes.ipynb  05-gtex_v8-select_top_genes.ipynb
nbs/_preprint/: readme.md  setup_analysis.sh
nbs/_preprint/05_benchmark/: benchmark_cli.py
nbs/_preprint/10_compute_correlations/: 05-01-gtex-var_pc_log2-ccc-gpu.py  10-combine_coefs.ipynb  10-combine_coefs.py  compute_correlations_cli.py
nbs/_preprint/15_intersections/: 05-gtex_whole_blood-intersections.ipynb  intersection_cli.py
nbs/_preprint/25_pvalue/: 10-sample_gene_pair_categories.ipynb  15-compute_pvalues_from_samples.ipynb  17-adjust_pvalues_fdr.ipynb
nbs/_preprint/99_manuscript/: 05-analyze_significant_pairs.ipynb
nbs/common/: README.md  compute_correlations_cli.py  compute_single_gene_pair_correlations_cli.py
scripts/: reload_cuda_ext.sh  repair_windows_wheel.py  run_tests.sh  setup_dev.sh
scripts/pypi/: 00-build_package.sh  01-build-multi-python-conda.sh  01-create-multi-python-conda.sh  02-build-with-cibuildwheel.sh  03-list-built-wheels.sh  10-upload_to_pypi.sh  10-upload_to_test_pypi.sh  README.md
tests/: test_coef.py  test_coef_pval.py
tests/cuda_ext/: test_ari.cu  test_ari_py.cu  test_ari_random.cu  test_coef.cu
tests/gpu/: misc_memory_consumption_calculation.py  scratch.py  test_ari_gpu.py  test_ccc_gpu.py  test_ccc_gpu_pvalue.py  test_ccc_gpu_return_parts.py  test_coef.py  test_coef_gpu.py  test_cpu_behavior.py  test_titanic_dataset.py  utils.py
(+102 files in other folders)
