[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=2.11.0",
    "cmake>=3.15",
    "ninja",
    "setuptools>=42",
    "wheel"
]
build-backend = "scikit_build_core.build"

[project]
name = "cccgpu"
version = "0.2.2"
description = "The Clustermatch Correlation Coefficient (CCC) with GPU acceleration"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-2-Clause Plus Patent"}
authors = [
    {name = "Milton Pividori", email = "milton.pividori@cuanschutz.edu"},
    {name = "Haoyu Zhang", email = "haoyu_z@outlook.com"},
]
dependencies = [
    "numpy>=1.21.0",
    "scipy",
    "numba",
    "pandas",
    "scikit-learn",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
]

[tool.scikit-build]
# Configure scikit-build-core
cmake.version = ">=3.15"
cmake.args = [
    "-DCMAKE_CUDA_ARCHITECTURES=75",  # Adjust for your target CUDA architecture
]
build.verbose = true
wheel.packages = ["libs/ccc"]  # Directory containing your Python packages
wheel.exclude = ["*.cpp", "*.h"]  # Exclude C++ headers from wheel
# Note: wheel.py-api removed to support multiple Python versions (3.10-3.15)
wheel.platlib = true  # Contains compiled extensions

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]

[tool.cibuildwheel]
# Build wheels for Python 3.10-3.15 on Linux x86_64
build = "cp3{10,11,12,13,14,15}-manylinux_x86_64"
skip = ["*-musllinux*", "*-manylinux_i686"]

# Use manylinux_2_28 which has newer toolchain (GCC 11+)
manylinux-x86_64-image = "manylinux_2_28"

# Install CUDA toolkit before building wheels
[tool.cibuildwheel.linux]
before-all = [
    "yum install -y wget",
    "wget https://developer.download.nvidia.com/compute/cuda/12.6.3/local_installers/cuda-repo-rhel8-12-6-local-12.6.3_560.35.05-1.x86_64.rpm",
    "rpm -i cuda-repo-rhel8-12-6-local-12.6.3_560.35.05-1.x86_64.rpm",
    "yum clean all",
    "yum install -y cuda-toolkit-12-6",
]

# Set CUDA environment variables
environment = { CUDA_HOME="/usr/local/cuda-12.6", PATH="/usr/local/cuda-12.6/bin:$PATH", LD_LIBRARY_PATH="/usr/local/cuda-12.6/lib64:$LD_LIBRARY_PATH" }

# Test the built wheels (optional, can be disabled)
# test-requires = ["pytest", "numpy", "scipy"]
# test-command = "pytest {project}/tests -v"
